fix align and max-width

--- a/palatable-frontend/src/assets/css/base/global.css
+++ b/palatable-frontend/src/assets/css/base/global.css
@@ -4,6 +4,12 @@
     align-items: center;
 } */
 
+#root > * {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 h1,
 h2,
 h3,
@@ -24,7 +30,8 @@ p {
 }
 
 .SiteContainer,
-.HeaderContainer {
+.HeaderContainer,
+.FooterContainer {
     max-width: 1440px;
     margin: 0 var(--site-margin);
 }
